[package]
name = "lore-codegen"
version = "0.1.0"
authors = ["Leandro Ostera <leandro@abstractmachines.dev>"]
edition = "2018"

[dependencies]
lore-ast = { path = "../lore-ast" }
lore-store = { path = "../lore-store" }
thiserror = "^1"
graphql-parser = "^0"
miette = "^3"

[dev-dependencies]
lore-parser = { path = "../lore-parser" }
pretty_assertions = "0.7"
insta = "1.8"
