[package]
name = "lore-parser"
version = "0.1.0"
authors = ["Leandro Ostera <leandro@abstractmachines.dev>"]
edition = "2018"

[dependencies]
logos = "^0"
lore-ast = { path = "../lore-ast" }
thiserror = "^1"
miette = "^3"
convert_case = "0.4.0"

[dev-dependencies]
pretty_assertions = "0.7"
insta = "1.8"
