[package]
name = "lore-store"
version = "0.1.0"
authors = ["Leandro Ostera <leandro@abstractmachines.dev>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lore-ast = { path = "../lore-ast" }
lore-parser = { path = "../lore-parser" }
thiserror = "^1"

[dev-dependencies]
pretty_assertions = "0.7"
insta = "1.8"
